# server/service/examManage/exam_paper_template_item.go
@@ -1,7 +1,6 @@
 package examManage
 
 import (
-	"fmt"
 	"github.com/flipped-aurora/gin-vue-admin/server/global"
 	"github.com/flipped-aurora/gin-vue-admin/server/model/common/request"
 	"github.com/flipped-aurora/gin-vue-admin/server/model/examManage"
@@ -90,149 +89,146 @@ func (paperTemplateItemService *PaperTemplateItemService) GetPaperId(info examMa
 
 func (paperTemplateItemService *PaperTemplateItemService) SetPaperChoiceQuestion(info []examManage.PaperTemplateItem) (err error) {
 	var list []questionBank.MultipleChoice
-	fmt.Println(len(info))
-	fmt.Println(info)
-	//paperId := paperTemplateItemService.GetPaperId(info[0])
+	paperId := paperTemplateItemService.GetPaperId(info[0])
 	if len(info) > 0 {
 		for i := 0; i < len(info); i++ {
 			num := info[i].Num
 			uuid := rand.Int63()
-			fmt.Println(*info[i].ProblemType)
-			err = global.GVA_DB.Where("problem_type = ? ", &info[i].ProblemType).Order(uuid).Limit(*num).Find(&list).Error
-			fmt.Println(list)
-			//if err != nil {
-			//	return
-			//} else {
-			//	for i := 0; i < *num; i++ {
-			//		questionMerge := examManage.PaperQuestionMerge{
-			//			GVA_MODEL:    global.GVA_MODEL{},
-			//			PaperId:      &paperId,
-			//			QuestionId:   &list[i].ID,
-			//			Score:        info[i].Score,
-			//			QuestionType: info[i].QuestionType,
-			//			ProblemType:  info[i].ProblemType,
-			//		}
-			//		err = global.GVA_DB.Create(&questionMerge).Error
-			//		if err != nil {
-			//			return
-			//		}
-			//	}
-			//}
+			err = global.GVA_DB.Where("problem_type = ? and can_exam = ?", &info[i].ProblemType, 1).Order(uuid).Limit(*num).Find(&list).Error
+			if err != nil {
+				return
+			} else {
+				for j := 0; j < len(list); j++ {
+					questionMerge := examManage.PaperQuestionMerge{
+						GVA_MODEL:    global.GVA_MODEL{},
+						PaperId:      &paperId,
+						QuestionId:   &list[j].ID,
+						Score:        info[i].Score,
+						QuestionType: info[i].QuestionType,
+						ProblemType:  info[i].ProblemType,
+					}
+					err = global.GVA_DB.Create(&questionMerge).Error
+					if err != nil {
+						return
+					}
+				}
+			}
+		}
+	}
+	return
+}
+func (paperTemplateItemService *PaperTemplateItemService) SetPaperJudgeQuestion(info []examManage.PaperTemplateItem) (err error) {
+	var list []questionBank.MultipleChoice
+	paperId := paperTemplateItemService.GetPaperId(info[0])
+	if len(info) > 0 {
+		for i := 0; i < len(info); i++ {
+			num := info[i].Num
+			uuid := rand.Int63()
+			err = global.GVA_DB.Where("problem_type = ? and can_exam = ?", &info[i].ProblemType, 1).Order(uuid).Limit(*num).Find(&list).Error
+			if err != nil {
+				return
+			} else {
+				for j := 0; j < len(list); j++ {
+					questionMerge := examManage.PaperQuestionMerge{
+						GVA_MODEL:    global.GVA_MODEL{},
+						PaperId:      &paperId,
+						QuestionId:   &list[j].ID,
+						Score:        info[i].Score,
+						QuestionType: info[i].QuestionType,
+						ProblemType:  info[i].ProblemType,
+					}
+					err = global.GVA_DB.Create(&questionMerge).Error
+					if err != nil {
+						return
+					}
+				}
+			}
 		}
 	}
 	return
 }
 
-//func (paperTemplateItemService *PaperTemplateItemService) SetPaperCJudgeQuestion(info []examManage.PaperTemplateItem) (err error) {
-//	var list []questionBank.MultipleChoice
-//	if len(info) > 0 {
-//		paperId := paperTemplateItemService.GetPaperId(info[0])
-//		for i := 0; i < len(info); i++ {
-//			num := info[i].Num
-//			uuid := utils.GetUuid()
-//			err = global.GVA_DB.Where("question_type = ? ", info[i].ProblemType).Order(uuid).Limit(*num).Find(&list).Error
-//			if err != nil {
-//				return
-//			} else {
-//				for i := 0; i < *num; i++ {
-//					questionMerge := examManage.PaperQuestionMerge{
-//						GVA_MODEL:    global.GVA_MODEL{},
-//						PaperId:      &paperId,
-//						QuestionId:   &list[i].ID,
-//						Score:        info[i].Score,
-//						QuestionType: info[i].QuestionType,
-//						ProblemType:  info[i].ProblemType,
-//					}
-//					err = global.GVA_DB.Create(&questionMerge).Error
-//					if err != nil {
-//						return
-//					}
-//				}
-//			}
-//		}
-//	}
-//	return
-//}
-//func (paperTemplateItemService *PaperTemplateItemService) SetPaperOptionsQuestion(info []examManage.PaperTemplateItem) (err error) {
-//	var list []questionBank.MultipleChoice
-//	paperId := paperTemplateItemService.GetPaperId(info[0])
-//	if len(info) > 0 {
-//
-//		for i := 0; i < len(info); i++ {
-//			num := info[i].Num
-//			uuid := utils.GetUuid()
-//			err = global.GVA_DB.Where("question_type = ? ", info[i].ProblemType).Order(uuid).Limit(*num).Find(&list).Error
-//			if err != nil {
-//				return
-//			} else {
-//				for i := 0; i < *num; i++ {
-//					questionMerge := examManage.PaperQuestionMerge{
-//						GVA_MODEL:    global.GVA_MODEL{},
-//						PaperId:      &paperId,
-//						QuestionId:   &list[i].ID,
-//						Score:        info[i].Score,
-//						QuestionType: info[i].QuestionType,
-//						ProblemType:  info[i].ProblemType,
-//					}
-//					err = global.GVA_DB.Create(&questionMerge).Error
-//					if err != nil {
-//						return
-//					}
-//				}
-//			}
-//		}
-//	}
-//	return
-//}
-//func (paperTemplateItemService *PaperTemplateItemService) SetPaperProgrammQuestion(info []examManage.PaperTemplateItem) (err error) {
-//	var list []questionBank.MultipleChoice
-//	paperId := paperTemplateItemService.GetPaperId(info[0])
-//	if len(info) > 0 {
-//		for i := 0; i < len(info); i++ {
-//			num := info[i].Num
-//			uuid := utils.GetUuid()
-//			err = global.GVA_DB.Where("question_type = ?", info[i].ProblemType).Order(uuid).Limit(*num).Find(&list).Error
-//			if err != nil {
-//				return
-//			} else {
-//				for i := 0; i < *num; i++ {
-//					questionMerge := examManage.PaperQuestionMerge{
-//						GVA_MODEL:    global.GVA_MODEL{},
-//						PaperId:      &paperId,
-//						QuestionId:   &list[i].ID,
-//						Score:        info[i].Score,
-//						QuestionType: info[i].QuestionType,
-//						ProblemType:  info[i].ProblemType,
-//					}
-//					err = global.GVA_DB.Create(&questionMerge).Error
-//					if err != nil {
-//						return
-//					}
-//				}
-//			}
-//		}
-//	}
-//	return
-//}
+func (paperTemplateItemService *PaperTemplateItemService) SetPaperOptionsQuestion(info []examManage.PaperTemplateItem) (err error) {
+	var list []questionBank.MultipleChoice
+	paperId := paperTemplateItemService.GetPaperId(info[0])
+	if len(info) > 0 {
+		for i := 0; i < len(info); i++ {
+			num := info[i].Num
+			uuid := rand.Int63()
+			err = global.GVA_DB.Where("problem_type = ? and can_exam = ?", &info[i].ProblemType, 1).Order(uuid).Limit(*num).Find(&list).Error
+			if err != nil {
+				return
+			} else {
+				for j := 0; j < len(list); j++ {
+					questionMerge := examManage.PaperQuestionMerge{
+						GVA_MODEL:    global.GVA_MODEL{},
+						PaperId:      &paperId,
+						QuestionId:   &list[j].ID,
+						Score:        info[i].Score,
+						QuestionType: info[i].QuestionType,
+						ProblemType:  info[i].ProblemType,
+					}
+					err = global.GVA_DB.Create(&questionMerge).Error
+					if err != nil {
+						return
+					}
+				}
+			}
+		}
+	}
+	return
+}
+
+func (paperTemplateItemService *PaperTemplateItemService) SetPaperProgramQuestion(info []examManage.PaperTemplateItem) (err error) {
+	var list []questionBank.MultipleChoice
+	paperId := paperTemplateItemService.GetPaperId(info[0])
+	if len(info) > 0 {
+		for i := 0; i < len(info); i++ {
+			num := info[i].Num
+			uuid := rand.Int63()
+			err = global.GVA_DB.Where("problem_type = ? and can_exam = ?", &info[i].ProblemType, 1).Order(uuid).Limit(*num).Find(&list).Error
+			if err != nil {
+				return
+			} else {
+				for j := 0; j < len(list); j++ {
+					questionMerge := examManage.PaperQuestionMerge{
+						GVA_MODEL:    global.GVA_MODEL{},
+						PaperId:      &paperId,
+						QuestionId:   &list[j].ID,
+						Score:        info[i].Score,
+						QuestionType: info[i].QuestionType,
+						ProblemType:  info[i].ProblemType,
+					}
+					err = global.GVA_DB.Create(&questionMerge).Error
+					if err != nil {
+						return
+					}
+				}
+			}
+		}
+	}
+	return
+}
+
 func (paperTemplateItemService *PaperTemplateItemService) SetPaperQuestion(info []examManage.PaperTemplateItem) (err error) {
 	err = paperTemplateItemService.SetPaperChoiceQuestion(info)
 	if err != nil {
 		return
 	} else {
-		//err = paperTemplateItemService.SetPaperCJudgeQuestion(info)
-		//if err != nil {
-		//	return
-		//} else {
-		//	err = paperTemplateItemService.SetPaperOptionsQuestion(info)
-		//	if err != nil {
-		//		return
-		//	} else {
-		//		err = paperTemplateItemService.SetPaperProgrammQuestion(info)
-		//		if err != nil {
-		//			return
-		//		}
-		//	}
-		//}
+		err = paperTemplateItemService.SetPaperJudgeQuestion(info)
+		if err != nil {
+			return
+		} else {
+			err = paperTemplateItemService.SetPaperOptionsQuestion(info)
+			if err != nil {
+				return
+			} else {
+				err = paperTemplateItemService.SetPaperProgramQuestion(info)
+				if err != nil {
+					return
+				}
+			}
+		}
 	}
 	return
 }
